Fixed Align preview layout bug when num of src subs != num of exmp subs

--- a/frontend/src/styles/SubtitlePreview.css
+++ b/frontend/src/styles/SubtitlePreview.css
@@ -1,15 +1,20 @@
 .file-preview-section {
-    justify-content: center;
-    align-items: center;
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    width: 100%;
+    align-items: flex-start;
+    /* Align items at the top */
+    justify-content: center;
+    /* Distribute space evenly */
 }
 
 .source-file-preview-container,
 .modified-file-preview-container {
     max-width: 600px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .metadata-and-subtitle-preview-section {
@@ -21,11 +26,14 @@
 .metadata-content {
     border: 1px solid #6c757d;
     border-radius: 4px;
-    padding: 30px;
+    padding: 20px;
     background-color: transparent;
     margin-bottom: 10px;
     width: 100%;
     height: 200px;
+    /* Allow height to adjust to content */
+    min-height: 100px;
+    /* Minimum height */
     box-sizing: border-box;
 }
 
@@ -42,11 +50,9 @@
     padding: 8px;
     margin-bottom: 2px;
     border-radius: 4px;
+    height: 90px;
     word-wrap: break-word;
     white-space: normal;
-}
-
-.subtitle-entry {
     font-family: monospace;
 }
 
@@ -66,4 +72,17 @@
 
 .subtitle-entry:nth-child(odd) {
     background-color: #161522;
+}
+
+/* Add media query for smaller screens */
+@media (max-width: 1200px) {
+    .file-preview-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .source-file-preview-container,
+    .modified-file-preview-container {
+        margin-bottom: 20px;
+    }
 }
